2006-05-23  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Eliminated a warning.

2006-05-22  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.ac: Do never use CUPS commands "enable-cups",
	  "disable-cups", "accept-cups", "reject-cups", even if
	  executable files with these names are available. CUPS has only
	  one executable for these tasks and recognizes by the
	  executable/link name what to do. So it only accepts execution
	  with one of the names "enable", "disable", "accept", "reject".

	* lib/Foomatic/DB.pm: When generating PPD files from Foomatic
	  XML data and the option XML files contain "<arg_order>" tags
	  with different values, the options get ordered by the 
	  "<arg_order>" values (within their group). This way manually
	  defining the presentation order of the options gets possible.
	  Fixed also a buglet in the setting of the default of numerical
	  options.

	* foomatic-ppdfile.in: Removed "use strict;" due to an
	  incompatibility with the "getopts()" Perl function.

2006-05-20  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Improved group name parsing in the PPD
	  files, now the group names of the Gutenprint CUPS raster
	  PPDs are read out correctly. Do not sort the options any more
	  when reading PPD files.

2006-05-19  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-ppdfile.in: Let PPD file generation with cups-driverd
	  also work if the driver name contains dashes (as in Gutenprint),
	  added "use strict;", let debug output and error messages have
	  prefixes to be correctly categorized in the CUPS error_log.

2006-04-22  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Added support for reading additional items
	  from the /etc/cups/printers.conf file: Print quotas, individual,
	  printer sharing, error and operation policies.

2006-04-21  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Eliminated some warnings
